# auto_res

./: .gitignore  AGENTS.md
sirep/: .env.example  export_repo_txt.py  pyproject.toml  sirep.db
sirep/adapters/: base.py  stubs.py
sirep/app/: api.py  async_loop.py  captura.py  cli.py  steps.py  tratamento.py
sirep/domain/: enums.py  logs.py  models.py  schemas.py
sirep/infra/: config.py  db.py  logging.py  repositories.py  runtime_credentials.py
sirep/scripts/: pipeline.ps1  reset_db.py  run_pipeline.py  smoke.ps1  tail_logs.ps1
sirep/services/: base.py  etapas.py  gestao_base.py  notepad.py  orchestrator.py
sirep/shared/: config.py  fakes.py  idempotency.py  retry.py
sirep/sql/: 001_init.sql
sirep/tools/: export_repo_txt.py
sirep/ui/: index.html  login.html
sirep/ui/css/: styles.css
sirep/ui/js/: app.js  auth.js  dom.js  gestao.js  login.js  logs.js  tratamento.js  utils.js
tests/: test_captura_endpoints.py  test_captura_historico.py  test_captura_service.py  test_config.py  test_gestao_base_service.py  test_health.py  test_pipeline_endpoints.py  test_pipeline_smoke.py  test_runtime_credentials.py  test_tratamentos_endpoints.py
txt_export/: manifest.csv
txt_export/sirep/adapters/: base.py.txt  stubs.py.txt
txt_export/sirep/app/: api.py.txt  captura.py.txt  cli.py.txt
txt_export/sirep/domain/: enums.py.txt  models.py.txt  schemas.py.txt
txt_export/sirep/infra/: config.py.txt  db.py.txt  repositories.py.txt
txt_export/sirep/scripts/: pipeline.ps1.txt  reset_db.py.txt  run_pipeline.py.txt  smoke.ps1.txt
(+6 files in other folders)
