[project]
name = "sirep"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "SQLAlchemy>=2.0.32",
  "psycopg[binary]>=3.1.12",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "tzdata>=2024.1",
  "httpx>=0.27.0",
]
